--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,4 +1,3 @@
-
 .navbar {
     width: 100%;
     height: 3rem;
@@ -45,7 +44,7 @@
     opacity: 1;
     pointer-events: auto;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     text-align: center;
     height: 3rem;
     visibility: visible;
@@ -61,7 +60,29 @@
 .navbar ul li {
     padding: 10px;
     cursor: pointer;
+    position: relative;
 }
+
+.account-menu .dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: transparent;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;  
+    top: 100%;
+    left: 0;
+    width: 200px;
+    text-align: left;
+}
+
+.account-menu:hover .dropdown-menu, .account-menu .dropdown-menu.open {
+    display: block;
+}
+
+.dropdown-menu li {
+    padding: 10px;
+}
+
 .overlay {
     display: none;
     position: fixed;
@@ -81,12 +102,12 @@
     .menu-icon {
         display: block;
     }
-    .navbar{
+    .navbar {
         display: flex;
-        }
+    }
     .navbar ul {
         position: fixed;
-        top: 3rem; 
+        top: 3rem;
         left: 0;
         background-color: rgba(0, 0, 0, 0.7);
         width: 100%;
@@ -94,7 +115,6 @@
         opacity: 0;
         visibility: hidden;
         height: auto;
-
     }
 
     .navbar ul.open {
@@ -106,11 +126,9 @@
         padding: 10px;
         border-bottom: 1px solid #fff;
         text-transform: uppercase;
-
     }
 
     .content {
         margin-top: 3rem;
     }
 }
-
